--- a/Programs/Models/training_framework.ipynb
+++ b/Programs/Models/training_framework.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "├── FallCatcher\n",
     "│   ├── Programs\n",
     "│   │   ├── Models\n",
-    "|   │   │   └── t\n",
+    "|   │   │   └── training_framework.ipynb\n",
     "│   │   \n",
     "│   │ \n",
     "│   │    \n",
@@ -83,25 +83,6 @@
    "metadata": {},
    "source": [
     "## Load Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR_classifier.ipynb           moving window.ipynb\r\n",
-      "LSTM-Training-All-Data.ipynb  nested_cross_validation.ipynb\r\n",
-      "RNN.ipynb                     training_framework.ipynb\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls"
    ]
   },
   {
