added more fall labels

--- a/Programs/Feature_extraction/scale_sort_ALL_feature_extraction.ipynb
+++ b/Programs/Feature_extraction/scale_sort_ALL_feature_extraction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = \"./raw_data/\"\n",
-    "lead_time = \"100\""
+    "raw_data = \"../../../Raw_data/\"\n",
+    "lead_time = \"10\""
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +62,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Remove outliers "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing one second radius of window which look like a fall \n",
+    "# at 801934 msec in C3 subject \n",
+    "# and at 1268349 msec in S2 subject\n",
+    "S2.drop(S2.loc[(S2.time_counter >= 1267349) & (S2.time_counter <= 1269349)].index, inplace = True)\n",
+    "C3.drop(C3.loc[(C3.time_counter >= 800934) & (C3.time_counter <= 802934)].index, inplace = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_counter</th>\n",
+       "      <th>accel_base_X</th>\n",
+       "      <th>fall_value</th>\n",
+       "      <th>accel_base_Y</th>\n",
+       "      <th>accel_base_Z</th>\n",
+       "      <th>accel_base_mag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [time_counter, accel_base_X, fall_value, accel_base_Y, accel_base_Z, accel_base_mag]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C3.loc[(C3.time_counter >= 801824) & (S2.time_counter <= 801840)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convert Data to Numpy Arrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,11 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def new_create_df(dataset, look_back, features, rem_range, skip):\n",
+    "def new_create_df(dataset, look_back,fall_buffer , features, rem_range, skip):\n",
     "\n",
     "  fall_sec = dataset[dataset['fall_value']==1].index.values.tolist()\n",
     "  dataset = dataset[features]\n",
@@ -171,15 +245,18 @@
     "  end_list.append(dataset.shape[0]-look_back-1)  \n",
     "  \n",
     "  #add fall values\n",
-    "  for i in range(len(fall_sec)):\n",
-    "    a = dataset.iloc[fall_sec[i]-look_back:fall_sec[i], :feat_count].values\n",
-    "    a = np.reshape(a,(look_back,1,feat_count)).tolist()\n",
-    "    b = dataset.iloc[fall_sec[i], feat_count]\n",
-    "    sec.append(fall_sec[i])\n",
-    "    A.append(a)\n",
-    "    B.append(b)\n",
-    "  print(\"Added total falls of \",str(len(fall_sec)))\n",
-    "\n",
+    "  fall_count = 0\n",
+    "  for i,fall in enumerate(fall_sec):\n",
+    "        for j in range(fall-fall_buffer,fall+1,skip):  \n",
+    "            print(j)\n",
+    "            a = dataset.iloc[j-look_back:j, :feat_count].values\n",
+    "            a = np.reshape(a,(look_back,1,feat_count)).tolist()\n",
+    "            b = 1\n",
+    "            sec.append(j)\n",
+    "            A.append(a)\n",
+    "            B.append(b)\n",
+    "            fall_count += 1\n",
+    "  print(\"Added total falls of \",str(fall_count))\n",
     "  #add non-fall values\n",
     "  track = 100000\n",
     "  for start,end in zip(start_list,end_list):\n",
@@ -205,6 +282,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,17 +310,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feat = \"./Features/Lead_Times/100ms/Mag/\" # Where to output features\n",
+    "feat = \"../../../Features/Lead_Times/100ms/Mag/\" # Where to output features\n",
     "\n",
     "lead_time = 100 # Declared at the top\n",
-    "lb = 50\n",
+    "lb = 2\n",
     "rem_range = 500\n",
     "skip_val = 25\n",
     "feat_type = \"mag\"\n",
+    "fall_buffer = 75\n",
     "\n",
     "meta = \"_\" + str(feat_type) + \"_\" + str(lead_time) + \"ms_\" + str(lb) + \"lb\"\n",
     "\n",
@@ -246,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
@@ -257,131 +342,131 @@
      "text": [
       "Extracting for Subject: S1\n",
       "   accel_base_mag  fall_value\n",
-      "0       -0.024030         0.0\n",
-      "1        0.152847         0.0\n",
-      "2        0.143863         0.0\n",
-      "3        0.400448         0.0\n",
-      "4        0.367624         0.0\n",
-      "Fall_sec:  [341097, 361565, 386571, 406718, 422670, 457962, 470794, 483551, 504175, 516389, 589135, 610911, 623077, 654761, 671718, 684551, 699279, 869428, 882218, 898976, 918070, 986652, 998351, 1014093, 1029462]\n",
-      "Added total falls of  25\n",
+      "0       -0.023937         0.0\n",
+      "1        0.153095         0.0\n",
+      "2        0.144104         0.0\n",
+      "3        0.400913         0.0\n",
+      "4        0.368061         0.0\n",
+      "Fall_sec:  [341142, 361610, 386616, 406763, 422715, 458007, 470839, 483596, 504220, 516433, 589180, 610956, 623122, 654806, 671763, 684596, 699324, 869473, 882263, 899021, 918115, 986697, 998396, 1014138, 1029507]\n",
+      "341067\n",
+      "341092\n",
+      "341117\n",
+      "341142\n",
+      "361535\n",
+      "361560\n",
+      "361585\n",
+      "361610\n",
+      "386541\n",
+      "386566\n",
+      "386591\n",
+      "386616\n",
+      "406688\n",
+      "406713\n",
+      "406738\n",
+      "406763\n",
+      "422640\n",
+      "422665\n",
+      "422690\n",
+      "422715\n",
+      "457932\n",
+      "457957\n",
+      "457982\n",
+      "458007\n",
+      "470764\n",
+      "470789\n",
+      "470814\n",
+      "470839\n",
+      "483521\n",
+      "483546\n",
+      "483571\n",
+      "483596\n",
+      "504145\n",
+      "504170\n",
+      "504195\n",
+      "504220\n",
+      "516358\n",
+      "516383\n",
+      "516408\n",
+      "516433\n",
+      "589105\n",
+      "589130\n",
+      "589155\n",
+      "589180\n",
+      "610881\n",
+      "610906\n",
+      "610931\n",
+      "610956\n",
+      "623047\n",
+      "623072\n",
+      "623097\n",
+      "623122\n",
+      "654731\n",
+      "654756\n",
+      "654781\n",
+      "654806\n",
+      "671688\n",
+      "671713\n",
+      "671738\n",
+      "671763\n",
+      "684521\n",
+      "684546\n",
+      "684571\n",
+      "684596\n",
+      "699249\n",
+      "699274\n",
+      "699299\n",
+      "699324\n",
+      "869398\n",
+      "869423\n",
+      "869448\n",
+      "869473\n",
+      "882188\n",
+      "882213\n",
+      "882238\n",
+      "882263\n",
+      "898946\n",
+      "898971\n",
+      "898996\n",
+      "899021\n",
+      "918040\n",
+      "918065\n",
+      "918090\n",
+      "918115\n",
+      "986622\n",
+      "986647\n",
+      "986672\n",
+      "986697\n",
+      "998321\n",
+      "998346\n",
+      "998371\n",
+      "998396\n",
+      "1014063\n",
+      "1014088\n",
+      "1014113\n",
+      "1014138\n",
+      "1029432\n",
+      "1029457\n",
+      "1029482\n",
+      "1029507\n",
+      "Added total falls of  100\n",
       "row claculating 100025\n",
       "row claculating 200025\n",
       "row claculating 300025\n",
-      "row claculating 400021\n",
-      "row claculating 500001\n",
-      "row claculating 600010\n",
-      "row claculating 700004\n",
-      "row claculating 800004\n",
-      "row claculating 900001\n",
-      "row claculating 1000001\n",
-      "row claculating 1100012\n",
-      "row claculating 1200012\n",
-      "row claculating 1300012\n",
-      "row claculating 1400012\n",
-      "row claculating 1500012\n",
-      "row claculating 1600012\n",
-      "Extracting for Subject: S2\n",
-      "   accel_base_mag  fall_value\n",
-      "0       -0.151726         0.0\n",
-      "1       -0.034263         0.0\n",
-      "2       -0.078798         0.0\n",
-      "3       -0.145711         0.0\n",
-      "4       -0.235085         0.0\n",
-      "Fall_sec:  [197486, 220355, 253204, 268554, 379513, 400389, 421818, 438532, 461043, 472096, 572056, 584641, 599351, 612722, 625048, 633877, 757413, 771972, 784403, 794425, 834220, 859644, 880054, 892056, 964639, 979703, 1001775, 1017166, 1058593, 1072360]\n",
-      "Added total falls of  30\n",
-      "row claculating 100025\n",
-      "row claculating 200011\n",
-      "row claculating 300004\n",
-      "row claculating 400889\n",
+      "row claculating 400016\n",
       "row claculating 500021\n",
-      "row claculating 600001\n",
-      "row claculating 700002\n",
-      "row claculating 800025\n",
-      "row claculating 900006\n",
-      "row claculating 1000003\n",
-      "row claculating 1100010\n",
-      "row claculating 1200010\n",
-      "row claculating 1300010\n",
-      "row claculating 1400010\n",
-      "Extracting for Subject: S3\n",
-      "   accel_base_mag  fall_value\n",
-      "0        0.046106         0.0\n",
-      "1        0.038169         0.0\n",
-      "2       -0.123549         0.0\n",
-      "3       -0.058111         0.0\n",
-      "4        0.025270         0.0\n",
-      "Fall_sec:  [332558, 346694, 418641, 434961, 459150, 473438, 575984, 594560, 617380, 632609, 653538, 668464, 682715, 694628, 813877, 824030, 866486, 879665, 888852, 906069, 922555, 940896, 1032000, 1048105]\n",
-      "Added total falls of  24\n",
-      "row claculating 100025\n",
-      "row claculating 200025\n",
-      "row claculating 300025\n",
-      "row claculating 400019\n",
-      "row claculating 500013\n",
-      "row claculating 600010\n",
-      "row claculating 700003\n",
-      "row claculating 800003\n",
-      "row claculating 900002\n",
-      "row claculating 1000021\n",
-      "Extracting for Subject: C1\n",
-      "   accel_base_mag  fall_value\n",
-      "0       -0.010461         0.0\n",
-      "1        0.003034         0.0\n",
-      "2       -0.021890         0.0\n",
-      "3       -0.011902         0.0\n",
-      "4        0.053147         0.0\n",
-      "Fall_sec:  [191472, 209997, 242292, 267029, 284897, 298790, 383242, 400891, 427867, 444999, 460664, 474709, 502860, 522713, 556450, 574399, 678122, 689699, 704976, 719318, 796736, 814181, 822008, 833913, 842946, 851809, 864429, 871842, 881416, 889927]\n",
-      "Added total falls of  30\n",
-      "row claculating 100025\n",
-      "row claculating 200022\n",
-      "row claculating 300015\n",
-      "row claculating 400017\n",
-      "row claculating 500009\n",
-      "row claculating 600024\n",
+      "row claculating 600005\n",
       "row claculating 700024\n",
-      "row claculating 800011\n",
-      "row claculating 900002\n",
-      "row claculating 1000002\n",
-      "row claculating 1100002\n",
-      "row claculating 1200002\n",
-      "row claculating 1300002\n",
-      "Extracting for Subject: C2\n",
-      "   accel_base_mag  fall_value\n",
-      "0       -0.041696         0.0\n",
-      "1       -0.006293         0.0\n",
-      "2        0.010120         0.0\n",
-      "3       -0.002955         0.0\n",
-      "4        0.030298         0.0\n",
-      "Fall_sec:  [133618, 150107, 170622, 183749, 194898, 204478, 218198, 228188, 241322, 250204, 304720, 313445, 323572, 332478, 364703, 373750, 382599, 393240, 401967, 410252, 427336, 436012, 445756, 456062, 514101, 523151, 532694, 543087, 561216, 569972]\n",
-      "Added total falls of  30\n",
-      "row claculating 100025\n",
-      "row claculating 200023\n",
-      "row claculating 300004\n",
-      "row claculating 400015\n",
-      "row claculating 500012\n",
-      "row claculating 600022\n",
-      "row claculating 700022\n",
-      "row claculating 800022\n",
-      "row claculating 900022\n",
-      "Extracting for Subject: C3\n",
-      "   accel_base_mag  fall_value\n",
-      "0        2.210657         0.0\n",
-      "1        2.067774         0.0\n",
-      "2        1.840960         0.0\n",
-      "3        1.657103         0.0\n",
-      "4        1.398625         0.0\n",
-      "Fall_sec:  [136178, 149186, 156737, 171856, 182652, 190538, 206809, 215064, 224799, 233676, 288631, 298776, 319136, 329562, 347774, 357214, 369375, 378434, 390268, 400659, 430908, 446142, 454687, 465612, 474473, 518186, 527243, 537150, 547144, 560481, 569479]\n",
-      "Added total falls of  31\n",
-      "row claculating 100025\n",
-      "row claculating 200013\n",
-      "row claculating 300001\n",
-      "row claculating 400018\n",
-      "row claculating 500023\n",
-      "row claculating 600004\n",
-      "row claculating 700004\n",
-      "row claculating 800004\n",
-      "row claculating 900004\n",
-      "CPU times: user 3min 14s, sys: 1min 24s, total: 4min 39s\n",
-      "Wall time: 6min 6s\n"
+      "row claculating 800024\n",
+      "row claculating 900021\n",
+      "row claculating 1000021\n",
+      "row claculating 1100007\n",
+      "row claculating 1200007\n",
+      "row claculating 1300007\n",
+      "row claculating 1400007\n",
+      "row claculating 1500007\n",
+      "row claculating 1600007\n",
+      "CPU times: user 31.7 s, sys: 941 ms, total: 32.6 s\n",
+      "Wall time: 34.4 s\n"
      ]
     }
    ],
@@ -389,7 +474,7 @@
     "%%time\n",
     "for i in range(len(subjects)):\n",
     "    print(\"Extracting for Subject:\", subject_names[i])\n",
-    "    temp_df, temp_x, temp_y = new_create_df(subjects[i], lb, features[feat_type], rem_range, skip_val)\n",
+    "    temp_df, temp_x, temp_y = new_create_df(subjects[i], lb,fall_buffer, features[feat_type], rem_range, skip_val)\n",
     "    \n",
     "    with open(feat + \"X_\" + subject_names[i] + meta + \".npy\", \"wb\") as f:\n",
     "        np.save(f, temp_x)\n",
